--- a/package.json
+++ b/package.json
@@ -8,24 +8,37 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "0.20.0",
     "expo": "~38.0.9",
+    "expo-font": "~8.2.2",
     "expo-splash-screen": "^0.5.0",
-    "expo-status-bar": "^1.0.0",
-    "expo-updates": "~0.2.10",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "~0.62.2",
-    "react-native-gesture-handler": "~1.6.1",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-screens": "~2.9.0",
+    "expo-status-bar": "^1.0.2",
+    "expo-updates": "~0.2.14",
+    "firebase": "7.19.0",
+    "moment": "2.27.0",
+    "react": "~16.13.1",
+    "react-dom": "~16.13.1",
+    "react-native": "~0.63.2",
+    "react-native-elements": "2.2.1",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-keyboard-spacer": "0.4.1",
+    "react-native-loading-spinner-overlay": "1.1.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-redux-listener": "0.3.0",
+    "react-native-router-flux": "4.2.0",
+    "react-native-screens": "~2.10.1",
+    "react-native-size-matters": "0.3.0",
     "react-native-unimodules": "~0.10.1",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.13.9",
+    "react-redux": "7.2.1",
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "babel-jest": "~25.2.6",
-    "jest": "~25.2.6",
-    "react-test-renderer": "~16.11.0"
+    "@babel/core": "~7.11.4",
+    "babel-jest": "~26.3.0",
+    "jest": "~26.4.2",
+    "react-test-renderer": "~16.13.1"
   },
   "jest": {
     "preset": "react-native"
