--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
     "react-native": "~0.63.2",
-    "react-native-elements": "2.2.1",
+    "react-native-elements": "2.3.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-keyboard-spacer": "0.4.1",
     "react-native-loading-spinner-overlay": "1.1.0",
@@ -29,6 +29,7 @@
     "react-native-screens": "~2.10.1",
     "react-native-size-matters": "0.3.0",
     "react-native-unimodules": "~0.10.1",
+    "react-native-vector-icons": "7.0.0",
     "react-native-web": "~0.13.9",
     "react-redux": "7.2.1",
     "redux": "4.0.5",
