--- a/ios/Podfile
+++ b/ios/Podfile
@@ -86,6 +86,12 @@ target 'MyNoticeBoard4' do
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable these next few lines.
   add_flipper_pods!
+  pod 'appcenter-core', :path => '../node_modules/appcenter'
+
+  pod 'appcenter-analytics', :path => '../node_modules/appcenter-analytics'
+
+  pod 'appcenter-crashes', :path => '../node_modules/appcenter-crashes'
+
   post_install do |installer|
     flipper_post_install(installer)
   end
