--- a/package.json
+++ b/package.json
@@ -8,18 +8,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "appcenter": "3.1.1",
+    "appcenter-analytics": "3.1.1",
+    "appcenter-crashes": "3.1.1",
     "axios": "0.20.0",
     "expo": "~38.0.9",
-    "expo-font": "~8.2.2",
+    "expo-font": "8.2.2",
     "expo-splash-screen": "^0.5.0",
     "expo-status-bar": "^1.0.2",
     "expo-updates": "~0.2.14",
-    "firebase": "7.19.0",
+    "firebase": "7.19.1",
     "moment": "2.27.0",
+    "native-base": "2.13.14",
     "react": "~16.13.1",
     "react-dom": "~16.13.1",
     "react-native": "~0.63.2",
+    "react-native-device-info": "6.0.0",
     "react-native-elements": "2.3.0",
+    "react-native-firebase": "5.6.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-keyboard-spacer": "0.4.1",
     "react-native-loading-spinner-overlay": "1.1.0",
@@ -33,6 +39,7 @@
     "react-native-web": "~0.13.9",
     "react-redux": "7.2.1",
     "redux": "4.0.5",
+    "redux-form": "8.3.6",
     "redux-thunk": "2.3.0"
   },
   "devDependencies": {
